--- a/style.css
+++ b/style.css
@@ -47,6 +47,17 @@ nav{
     font-size: 50px;
 }
 
+.first-sec-button{
+    font-family: 'Lora', serif;
+    font-size: 15px;
+    color: white;
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: burlywood;
+    border-style: none;
+}
+
 .First-sec-img{
     background-image: url(images/Circle\ design.svg);
     background-size: 415px 415px;
@@ -65,15 +76,23 @@ nav{
     
 }
 
-.first-sec-button{
-    font-family: 'Lora', serif;
-    font-size: 15px;
-    color: white;
-    width: 200px;
-    height: 50px;
-    border-radius: 25px;
-    background-color: burlywood;
-    border-style: none;
+.Second-sec hr{
+    width: 1580px;
+    margin-top: 50px;
+    
 }
 
+.logos{
+    margin-top: 25px;
+    margin-bottom: -25px;
+    
+
+}
+
+.logos img{
+    margin-left: 160px;
+    margin-right: -5px;
+    justify-content: center;
+    align-items: center;
+}
 
