--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav{
 }
 
 .menu-items>ul>li:hover{
-    background-color: burlywood;
+    background-color: sandybrown;
     border-radius: 5px;
     
 }
@@ -56,7 +56,7 @@ nav{
     width: 200px;
     height: 50px;
     border-radius: 25px;
-    background-color: burlywood;
+    background-color: sandybrown;
     border-style: none;
 }
 
@@ -102,6 +102,14 @@ hr{
     align-items: center;
 }
 
+
+
+.Third-sec{
+    display: grid;
+    margin-bottom: 100px;
+    
+}
+
 .Third-sec h3{
     display: flex;
     margin-top: 100px;
@@ -110,9 +118,8 @@ hr{
     font-size: 25px;
 }
 
-.Third-sec{
-    display: grid;
-    
+.Third-sec h4{
+    font-size: 20px;
 }
 
 .items{
@@ -124,7 +131,7 @@ hr{
 }
 
 .items .item .price{
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .item{
@@ -132,7 +139,7 @@ hr{
     height: 470px;
     border-radius: 20px;
     background-color: white;
-    padding: 10px;
+    padding: 30px;
     box-shadow: 5px 5px 2px #ececec;
 }
 .rating i{
@@ -140,4 +147,66 @@ hr{
 }
 .rating-txt{
     margin-left: 5px;
+}
+.ext-link{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 140px;
+    margin-top: 20px;
+    color: sandybrown;
+    text-decoration: none;
+}
+footer{
+    background-color: #0A0826;
+    height: 300px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon-sty{
+    margin-right: 10px;
+    font-size: 25px;
+}
+
+@media only screen and (max-width:412px) {
+    body{
+        width: 100%;
+    }
+    .First-sec{
+        flex-direction: column;
+        width: 100%;
+
+    }
+    .Second-sec{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+    }
+    .Third-sec .items{
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+    }
+    
+}
+
+@media only screen and (min-width:412px) and (max-width:820px){
+    body{
+        width: 100%;
+    }
+    .First-sec{
+        flex-direction: column;
+        width: 100%;
+
+    }
+    .Second-sec{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+    }
+    .Third-sec .items{
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+    }
+    
 }
